MADE EVERYTHING BUT LASER BACKGROUND ABSOLUTE
added descriptions and a github link for my projects page

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -141,16 +141,25 @@
 			<div style="position:relative; margin-bottom:6em;">
 				<a id="github" NAME="Projects"></a>
 				<center id="github" class="about">
-					Coding Projects
+					Coding Projects 
+				</center>
+				<center>
+					<a href="https://github.com/dshen36"><span class="fa fa-github-square fa-3x" style=" vertical-align:middle"></span> Github.com/dshen36</a>
 				</center>
 				<ul class="projName"><center>
 					<ul class="proj"><Strong><u>Library Database</u>
-						<li>An intro to databases project that was meant to simulate the creation of a database in a team-based environment. This program mimicked the typical functionalities available when checking and returning a book, processing fines and holds, and generating reports.</li>
+						<li>An Intro to Databases project that was meant to simulate the creation of a database in a team-based environment. This program mimicked the typical functionalities available when checking and returning a book, processing fines and holds, and generating reports.</li>
 					</ul>
-					<ul class="proj"><Strong><u>Space-Invaders</u></ul>
-					<ul class="proj"><Strong><u>Shopping with Friends</u></ul>
+					<ul class="proj"><Strong><u>Space-Invaders</u>
+						<li>A mode 3 Gameboy game coded in C based off of the concept of Space-Invaders. Although it's not an exact replica, it simulates many of the controls that were required when this was an arcade game.</li>
+					</ul>
+					<ul class="proj"><Strong><u>Shopping with Friends</u>
+						<li> A hybrid andoid app, built in my Objects and Design class, that combines features from social networks, product rating application, and merching websites. It is backed by Parse to create a realistic and animated program. </li>
+					</ul>
 					<ul class="proj"><Strong><u>Ideas Portal App</u></ul>
-					<ul class="proj"><Strong><u>Comcast Dashboard</u></ul>
+					<ul class="proj"><Strong><u>Comcast Dashboard</u>
+						<li>A dashboard, utilizing bootstrap and d3, that analyzes the databases, tables, and contents stored via Hadoop and performs a statistical analysis on them. Using a harmonic mean program that determines the significance of similarity of one table versus another, or the reminents of abandoned tables, analysts can manually determine which tables need to be discarded verses updated./li>
+					</ul>
 				</center></ul>
 			</div>
 		</div>
