parallax and github
finished all of the summaries for projects.
prepared parallax- works for the most part

Issues: it disenables the fade in buttons on my contact page when it
scrolls up to my home page. Idk why. gotta figure it out

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -20,6 +20,7 @@
 		</script>
 	</head>
 	<body>
+		<a NAME="Home"></a>
 		<script src="jquery-ui.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<div id="background"> </div>
@@ -53,11 +54,11 @@
 		<div id="fixedDown">
 			<div id="navbar">
 				<ul class="nav">
-					<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#Home"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
-					<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#Home"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 				</ul>
 			</div>
 			<div id="name">
@@ -156,9 +157,12 @@
 					<ul class="proj"><Strong><u>Shopping with Friends</u>
 						<li> A hybrid andoid app, built in my Objects and Design class, that combines features from social networks, product rating application, and merching websites. It is backed by Parse to create a realistic and animated program. </li>
 					</ul>
-					<ul class="proj"><Strong><u>Ideas Portal App</u></ul>
+					<ul class="proj"><Strong><u>Ideas Portal App</u>
+						<li>A team based project where interns are split off into different groups to create an existing website into a functioning and mobile android application. This app specifically targets field workers who do not always have access to a computer to visit Comcast's Ideas Portal, a site to promote, share and discuss projects and issues, and thus need a competent alternate solution.
+						</li>
+					</ul>
 					<ul class="proj"><Strong><u>Comcast Dashboard</u>
-						<li>A dashboard, utilizing bootstrap and d3, that analyzes the databases, tables, and contents stored via Hadoop and performs a statistical analysis on them. Using a harmonic mean program that determines the significance of similarity of one table versus another, or the reminents of abandoned tables, analysts can manually determine which tables need to be discarded verses updated./li>
+						<li>A dashboard, utilizing bootstrap and d3, that analyzes the databases, tables, and contents stored via Hadoop and performs a statistical analysis on them. Using a harmonic mean program that determines the significance of similarity of one table versus another, or the reminents of abandoned tables, analysts can manually determine which tables need to be discarded verses updated. </li>
 					</ul>
 				</center></ul>
 			</div>
