smooth transition works now via click
//  $('#contact').on('click', function() { //get all anchors (a) that
contains # in href but exclude anchors with href exaclty equals to #
//   //'a[href*=#]:not([href=#])'
// if (location.pathname.replace(/^\//,'') ==
this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
//yields the address of a website ie) var x = location.hostname; x=
danShen.com
//    var target = $("#");//retrieves the hash after a website. ie) var
target = $(danShen.com#home) yields #home
//    target = target.length ? target : $('[name=' + this.hash.slice(1)
+']'); //If condition is true, the operator returns the value of expr1;
otherwise, it returns the value of expr2.
//    //hash.slice(1)-When there’s no hash, it doesn’t throw an error,
although it returns undefined instead of the empty string.
//    if (target.length) {
//   $('html,body').animate({
//     scrollTop: target.offset().top
//  }, 1000);
//  return false;
//    }
// }
//  });

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<a NAME="Home"></a>
+		<!-- <a NAME="Home"></a> -->
 		<script type="text/javascript" src="jQuery.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<script src="script.js"></script>
@@ -55,11 +55,11 @@
 		<div id="fixedDown">
 			<div id="navbar">
 				<ul class="nav">
-					<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#Home"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="home" title="Home Page"><a href="#"><span class="fa fa-home fa-2x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="about" title="About Me"><a href="#About"><span class="fa fa-question fa-3x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="resume" title="Resume"><a href="#Resume"><span class="fa fa-file-text fa-2x" style=" vertical-align:middle"></span></a></li>
 					<li class="pulsor" class="pulsor-text" id="projects" title="Coding Projects"><a href="#Projects"><span class="fa fa-file-code-o fa-2x" style=" vertical-align:middle"></span></a></li>
-					<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#Home"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
+					<li class="pulsor" class="pulsor-text" id="contact" title="Contact Information"><a href="#"><span class="fa fa-envelope fa-2x" style=" vertical-align:middle"></span></a></li>
 				</ul>
 			</div>
 			<div id="name">
