accordion windows applied to each of the ideas
-accordion windows per idea
-pulse effect on window
-need to make it only on name
-not on div
-should switch up the order of the page
-resume after projects

--- a/ShenWebsite.html
+++ b/ShenWebsite.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="fontAwesome/css/font-awesome.min.css">
 		<script src="fiberopticsBackground.js"></script>
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css">
+		<script src="accordian/showHide.js"></script>
 		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
         <!-- <style type="text/css">body { background: black; }</style> -->
 		<script>
@@ -63,7 +64,7 @@
 				</ul>
 			</div>
 			<div id="name">
-				<center id="landing">
+				<center class="landing">
 					Dan Shen
 				</center>
 				<ul class="contentDisappear" class="magic">
@@ -148,24 +149,24 @@
 				<center>
 					<a href="https://github.com/dshen36"><span class="fa fa-github-square fa-3x" style=" vertical-align:middle"></span> Github.com/dshen36</a>
 				</center>
-				<ul class="projName"><center>
-					<ul class="proj"><Strong><u>Library Database</u>
-						<li>An Intro to Databases project that was meant to simulate the creation of a database in a team-based environment. This program mimicked the typical functionalities available when checking and returning a book, processing fines and holds, and generating reports.</li>
+				<ul class="projName">
+					<ul class="proj show_hide1"><Strong><a ref="y">Library Database</a></Strong>
+						<li><div id="slidingDiv1" class="slidingDiv toggleDiv"> An Intro to Databases project that was meant to simulate the creation of a database in a team-based environment. This program mimicked the typical functionalities available when checking and returning a book, processing fines and holds, and generating reports.</li>
 					</ul>
-					<ul class="proj"><Strong><u>Space-Invaders</u>
-						<li>A mode 3 Gameboy game coded in C based off of the concept of Space-Invaders. Although it's not an exact replica, it simulates many of the controls that were required when this was an arcade game.</li>
+					<ul class="proj show_hide2"><Strong><a ref="o">Space-Invaders</a></Strong>
+						<li><div id="slidingDiv2" class="slidingDiv toggleDiv">A mode 3 Gameboy game coded in C based off of the concept of Space-Invaders. Although it's not an exact replica, it simulates many of the controls that were required when this was an arcade game.</li>
 					</ul>
-					<ul class="proj"><Strong><u>Shopping with Friends</u>
-						<li> A hybrid andoid app, built in my Objects and Design class, that combines features from social networks, product rating application, and merching websites. It is backed by Parse to create a realistic and animated program. </li>
+					<ul class="proj show_hide3"><Strong><a ref="n">Shopping with Friends</a></Strong>
+						<li><div id="slidingDiv3" class="slidingDiv toggleDiv"> A hybrid andoid app, built in my Objects and Design class, that combines features from social networks, product rating application, and merching websites. It is backed by Parse to create a realistic and animated program. </li>
 					</ul>
-					<ul class="proj"><Strong><u>Ideas Portal App</u>
-						<li>A team based project where interns are split off into different groups to create an existing website into a functioning and mobile android application. This app specifically targets field workers who do not always have access to a computer to visit Comcast's Ideas Portal, a site to promote, share and discuss projects and issues, and thus need a competent alternate solution.
+					<ul class="proj show_hide4"><Strong><a ref="e">Ideas Portal App</a></Strong>
+						<li><div id="slidingDiv4" class="slidingDiv toggleDiv"> A team based project where interns are split off into different groups to create an existing website into a functioning and mobile android application. This app specifically targets field workers who do not always have access to a computer to visit Comcast's Ideas Portal, a site to promote, share and discuss projects and issues, and thus need a competent alternate solution.
 						</li>
 					</ul>
-					<ul class="proj"><Strong><u>Comcast Dashboard</u>
-						<li>A dashboard, utilizing bootstrap and d3, that analyzes the databases, tables, and contents stored via Hadoop and performs a statistical analysis on them. Using a harmonic mean program that determines the significance of similarity of one table versus another, or the reminents of abandoned tables, analysts can manually determine which tables need to be discarded verses updated. </li>
+					<ul class="proj show_hide5"><Strong><a ref="x">Comcast Dashboard</a></Strong>
+						<li><div id="slidingDiv5" class="slidingDiv toggleDiv"> A dashboard, utilizing bootstrap and d3, that analyzes the databases, tables, and contents stored via Hadoop and performs a statistical analysis on them. Using a harmonic mean program that determines the significance of similarity of one table versus another, or the reminents of abandoned tables, analysts can manually determine which tables need to be discarded verses updated. </li>
 					</ul>
-				</center></ul>
+				</ul>
 			</div>
 		</div>
 
